# firstboot-qt

./: CMakeLists.txt  README.md  config.h  config.h.in  configdialog.cpp  configdialog.h  lang.cpp  lang.h  main.cpp  timezone.cpp  timezone.h  tz_config.h  userinfo.cpp  userinfo.h  welcome.cpp  welcome.h
data/: firstboot.service  run-firstboot
liblang/: CMakeLists.txt  utils.c  utils.h
libtimezone/: CMakeLists.txt  tz.c  tz.h
po/: CMakeLists.txt  POTFILES.in  firstboot-qt.pot  zh_CN.po
